ghc-4335c07/testsuite/tests/partial-sigs/should_fail/InstantiatedNamedWildcardsInConstraints.hs
{-# LANGUAGE NamedWildCards #-}
module InstantiatedNamedWildcardsInConstraints where

foo :: (Enum _a, _) => _a -> (String, b)
foo x = (show (succ x), x)
